--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Derek Kent for Maryland District 32 Delegate</title>
         <meta charset="utf-8">
