Use SystemJS global instead of System

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
         <script src="/libs/dependencies.js"></script>
 
         <script>
-            System.import('app/main');
+            SystemJS.import('app/main');
         </script>
     </head>
     <body>
