--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
         <meta name="twitter:image" content="https://derekkent.com/images/kent-for-delegate-1024x512.png">
         <meta name="twitter:image:alt" content="Derek Kent for Maryland District 32 Delegate">
 
-        <link rel="author" href="humans.txt">
+        <link rel="author" href="/humans.txt">
 
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="/styles/main.css">
