--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Derek Kent for Maryland District 32 Delegate</title>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="apple-mobile-web-app-capable" content="yes">
 
         <meta name="description" content="The official campaign website for Maryland District 32 House of Delegates candidate Derek Kent.">
@@ -25,7 +25,7 @@
 
         <link rel="author" href="/humans.txt">
 
-        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet'>
         <link rel="stylesheet" href="/styles/main.css">
 
         <script src="/jspm_packages/system.js"></script>
