Concat dependency scripts

--- a/src/index.html
+++ b/src/index.html
@@ -28,14 +28,7 @@
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet'>
         <link rel="stylesheet" href="/styles/main.css">
 
-        <script src="/jspm_packages/system.js"></script>
-        <script src="/jspm.browser.js"></script>
-        <script src="/jspm.config.js"></script>
-        <script src="/libs/dependencies.js"></script>
-
-        <script>
-            SystemJS.import('app/main');
-        </script>
+        <script src="/loader.js"></script>
     </head>
     <body>
         <noscript>
