--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,8 @@
         <meta name="twitter:image" content="https://derekkent.com/images/kent-for-delegate-1024x512.png">
         <meta name="twitter:image:alt" content="Derek Kent for Maryland District 32 Delegate">
 
+        <link rel="manifest" href="/manifest.json">
+
         <link rel="author" href="/humans.txt">
 
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet'>
@@ -34,6 +36,7 @@
         <noscript>
             <div class="noscript">
                 <img src="/images/kent.svg" alt="Derek Kent" height="155">
+                <p>JavaScript must be enabled to view this site.</p>
             </div>
         </noscript>
     </body>
