--- a/src/index.html
+++ b/src/index.html
@@ -27,10 +27,11 @@
 
         <link rel="author" href="/humans.txt">
 
-        <script src="/loader.js"></script>
+        <script src="/loader.js" defer></script>
 
-        <link rel="stylesheet" href="/styles/main.css">
-        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet'>
+        <noscript>
+            <link rel="stylesheet" href="/styles/noscript.css">
+        </noscript>
     </head>
     <body>
         <noscript>
